--- a/app/src/main/res/layout/fragment_fertilizer_application.xml
+++ b/app/src/main/res/layout/fragment_fertilizer_application.xml
@@ -297,7 +297,8 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_marginStart="@dimen/dimen_10dp">
+                    android:layout_marginStart="@dimen/dimen_10dp"
+                    android:id="@+id/layout_crop_fertilizer_application_reminders">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -308,7 +309,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edittext_corner"
-                    android:id="@+id/layout_crop_fertilizer_application_reminders"
                     android:orientation="horizontal">
 
 
