--- a/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
+++ b/app/src/main/res/layout/crop_fertilizer_application_list_card.xml
@@ -22,22 +22,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.9"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center">
 
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:background="#444444"
-                android:layout_margin="10dp"
-                android:src="@drawable/fertilizer_application"
-                />
+                android:background="@drawable/rounded_cornor_bg"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:padding="6dp"
+                android:src="@drawable/fertilizer_application" />
 
             <View
                 android:id="@+id/txt_view_crop_fertilizer_application_card_line"
-                android:layout_width="1dp"
-                android:layout_height="250dp"
-                android:layout_marginStart="16dp"
-                android:background="#E7EAE7"
+                android:layout_width="2dp"
+                android:layout_height="150dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="#444444"
                 android:textAlignment="center" />
 
         </LinearLayout>
@@ -46,23 +49,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
-            android:paddingRight="22dp"
+            android:padding="@dimen/dimen_10dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_view_crop_fertilizer_application_card_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
                 android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
-                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textSize="20sp"
                 android:textColor="@color/colorPrimary" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:padding="0dp"
                 android:background="@drawable/input_shapes_crops_card"
                 android:orientation="vertical" >
 
@@ -71,18 +75,19 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:layout_margin="0dp"
-                     >
+                    android:layout_marginStart="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="@dimen/dimen_5dp">
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
                         android:layout_weight="0.9"
                         android:text="Fertilizer Application"
                         android:textAlignment="gravity"
                         android:textColor="@color/colorPrimary"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:textStyle="bold"/>
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -112,9 +117,10 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="35dp"
-                    android:orientation="horizontal"
-                    android:padding="2dp">
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/txt_view_crop_fertilizer_application_card_operation"
@@ -130,21 +136,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_margin="0dp"
-                    android:padding="4dp">
+                    android:layout_marginStart="10dp"
+                    android:layout_marginBottom="@dimen/dimen_10dp">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginStart="34dp"
-                        android:text="Amount Used : "
+                        android:text="Amount Used"
                         android:textSize="14sp"
                         android:textColor="@color/blackText" />
-
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.4"
+                        android:text=":"
+                        android:textColor="@color/blackText"
+                        android:textSize="14sp" />
                     <TextView
                         android:id="@+id/txt_view_crop_fertilizer_application_card_rate"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="50%"
@@ -155,21 +166,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_margin="0dp"
-                    android:padding="4dp">
+                    android:layout_marginStart="@dimen/dimen_10dp"
+                    android:layout_marginBottom="@dimen/dimen_10dp">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginStart="34dp"
-                        android:text="Recurrence : "
+                        android:text="Recurrence"
                         android:textSize="14sp"
                         android:textColor="@color/blackText" />
-
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.4"
+                        android:text=":"
+                        android:textColor="@color/blackText"
+                        android:textSize="14sp" />
                     <TextView
                         android:id="@+id/txt_view_crop_fertilizer_application_card_recurrence"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Monthly"
