--- a/app/src/main/res/layout/crop_field_list_card.xml
+++ b/app/src/main/res/layout/crop_field_list_card.xml
@@ -64,7 +64,7 @@
 
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1"
+                                    android:layout_weight=".5"
                                     android:textSize="16dp" />
 
 
