added date picker implementation on medication

--- a/app/src/main/res/layout/fragment_add_medication.xml
+++ b/app/src/main/res/layout/fragment_add_medication.xml
@@ -95,7 +95,7 @@
                                 android:layout_marginRight="10dp"
                                 android:layout_centerVertical="true"
                                 android:layout_gravity="center"
-                                android:src="@drawable/ic_calendar" />
+                                android:src="@drawable/ic_calendar_add" />
 
                         </RelativeLayout>
                     </LinearLayout>
