--- a/app/src/main/res/layout/fragment_breeding_stock_view.xml
+++ b/app/src/main/res/layout/fragment_breeding_stock_view.xml
@@ -46,7 +46,7 @@
                     android:padding="3.4dp">
 
                     <Spinner
-                        android:id="@+id/animal_section"
+                        android:id="@+id/animal_section_filter"
                         android:layout_width="match_parent"
                         android:layout_height="44dp"
                         android:layout_centerVertical="true"
