--- a/app/src/main/res/layout/fragment_breeding_stock_view.xml
+++ b/app/src/main/res/layout/fragment_breeding_stock_view.xml
@@ -25,46 +25,51 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dimen_20dp"
+            android:orientation="vertical"
+            android:layout_marginTop="@dimen/dimen_10dp"
+            android:layout_marginBottom="@dimen/dimen_10dp"
+            android:background="@drawable/crop_card_border">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_weight="1">
 
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="44dp"
-                    android:layout_alignParentStart="true"
                     android:background="@drawable/edittext_corner"
                     android:gravity="center"
                     android:padding="3.4dp">
 
-                    <Spinner
+
+
+                    <ImageView
+                        android:id="@+id/search"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="start"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/ic_search_menu24" />
+                    <EditText
                         android:id="@+id/animal_section_filter"
                         android:layout_width="match_parent"
                         android:layout_height="44dp"
+                        android:paddingStart="@dimen/dimen_10dp"
                         android:layout_centerVertical="true"
-                        android:layout_gravity="center"
-                        android:background="@android:color/transparent"
-                        android:entries="@array/breeding_stock"
-                        android:gravity="center"
-                        android:spinnerMode="dropdown" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="center"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginRight="10dp"
-                        android:src="@drawable/ic_filter_applied" />
+                        android:layout_toEndOf="@+id/search" />
 
                 </RelativeLayout>
 
@@ -73,6 +78,108 @@
 
 
         </LinearLayout>
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="@string/filter_by"
+           android:layout_margin="@dimen/dimen_10dp"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp">
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+                <LinearLayout
+                    android:id="@+id/btn_filter_by_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:layout_margin="@dimen/dimen_5dp"
+                    android:background="@drawable/crop_card_button_black">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:textAllCaps="true"
+                        android:textStyle="bold"
+                        android:gravity="center_horizontal"
+                        android:textColor="@color/white"
+                        android:layout_margin="2dp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btn_filter_by_breed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:layout_margin="@dimen/dimen_5dp"
+                    android:background="@drawable/crop_card_button_black">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Breed"
+                        android:textAllCaps="true"
+                        android:gravity="center_horizontal"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:layout_margin="2dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/btn_filter_by_dob"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:layout_margin="@dimen/dimen_5dp"
+                    android:background="@drawable/crop_card_button_black">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="DOB"
+                        android:textAllCaps="true"
+                        android:gravity="center_horizontal"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:layout_margin="2dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/btn_filter_by_sex"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:layout_margin="@dimen/dimen_5dp"
+                    android:background="@drawable/crop_card_button_black">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Sex"
+                        android:textAllCaps="true"
+                        android:gravity="center_horizontal"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:layout_margin="2dp"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        </LinearLayout>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/breeding_stock_recyclerView"
