--- a/app/src/main/res/layout/fragment_nutrient_calculator_results.xml
+++ b/app/src/main/res/layout/fragment_nutrient_calculator_results.xml
@@ -1,201 +1,175 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.myfarmnow.myfarmcrop.fragments.predictiontools.NutrientCalculatorResultsFragment">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-
-        <com.google.android.material.appbar.AppBarLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_nutrient_calculator_results"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+    </com.google.android.material.appbar.AppBarLayout>
 
-        </com.google.android.material.appbar.AppBarLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ScrollView
+            android:id="@+id/scroll_view_crop_roi_result"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:background="@color/whiteColor">
 
-
-            <ScrollView
-                android:id="@+id/scroll_view_crop_roi_result"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/whiteColor">
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="Results"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="The following Nutrients need to be replaced"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    >
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Results"
-                        android:layout_margin="8dp"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="The following Nutrients need to be replaced"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        />
-
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/text_view_crop_nutrients_calculator_results_n"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="N = 45Kg"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/text_view_crop_nutrients_calculator_results_p"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="P = 45Kg"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/text_view_crop_nutrients_calculator_results_k"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="K = 45Kg"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/layout_crop_nutrients_calculator_results_impact"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="vertical"
-                        >
+                        android:visibility="gone">
 
-
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:text="Economic Impact"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
                             android:layout_margin="8dp"
-                            android:gravity="center_vertical">
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/text_view_crop_nutrients_calculator_results_n"
+                                android:id="@+id/text_view_crop_nutrients_calculator_results_n_cost"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="N = 45Kg"
+                                android:text="N = UGX 456,900"
                                 android:textSize="16sp" />
 
-
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
                             android:layout_margin="8dp"
-                            android:gravity="center_vertical">
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/text_view_crop_nutrients_calculator_results_p"
+                                android:id="@+id/text_view_crop_nutrients_calculator_results_p_cost"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="P = 45Kg"
+                                android:text="P = UGX 456,900"
                                 android:textSize="16sp" />
 
-
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
                             android:layout_margin="8dp"
-                            android:gravity="center_vertical">
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/text_view_crop_nutrients_calculator_results_k"
+                                android:id="@+id/text_view_crop_nutrients_calculator_results_k_cost"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="K = 45Kg"
                                 android:textSize="16sp" />
-
-
                         </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:visibility="gone"
-                            android:id="@+id/layout_crop_nutrients_calculator_results_impact"
-                            >
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="8dp"
-                                android:text="Economic Impact"
-                                android:textColor="@color/colorPrimary"
-
-                                android:textStyle="bold"
-                                android:textSize="16sp"
-                                />
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_margin="8dp"
-                                android:gravity="center_vertical">
-
-                                <TextView
-                                    android:id="@+id/text_view_crop_nutrients_calculator_results_n_cost"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="N = UGX 456,900"
-                                    android:textSize="16sp" />
-
-
-                            </LinearLayout>
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_margin="8dp"
-                                android:gravity="center_vertical">
-
-                                <TextView
-                                    android:id="@+id/text_view_crop_nutrients_calculator_results_p_cost"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="P = UGX 456,900"
-                                    android:textSize="16sp" />
-
-
-                            </LinearLayout>
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:layout_margin="8dp"
-                                android:gravity="center_vertical">
-
-                                <TextView
-                                    android:id="@+id/text_view_crop_nutrients_calculator_results_k_cost"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="K = 45Kg"
-                                    android:textSize="16sp" />
-
-
-                            </LinearLayout>
-                        </LinearLayout>
-
-
                     </LinearLayout>
-
-
                 </LinearLayout>
-            </ScrollView>
+            </LinearLayout>
+        </ScrollView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</layout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
