--- a/app/src/main/res/layout/fragment_crop_activities_list.xml
+++ b/app/src/main/res/layout/fragment_crop_activities_list.xml
@@ -84,9 +84,9 @@
                         android:id="@+id/crop_activities_recyc_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/dimen_20dp"
-                        android:layout_marginRight="@dimen/dimen_20dp"
-                        android:layout_marginBottom="@dimen/dimen_20dp"
+                        android:layout_marginStart="@dimen/dimen_10dp"
+                        android:layout_marginEnd="@dimen/dimen_10dp"
+                        android:layout_marginBottom="@dimen/dimen_10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
