--- a/app/src/main/res/layout/fragment_crop_spraying.xml
+++ b/app/src/main/res/layout/fragment_crop_spraying.xml
@@ -58,7 +58,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dimen_20dp"
+                android:layout_marginBottom="15dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -159,7 +159,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
-            android:layout_marginBottom="@dimen/dimen_20dp">
+            android:layout_marginBottom="15dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -201,7 +201,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
-            android:layout_marginBottom="@dimen/dimen_20dp">
+            android:layout_marginBottom="15dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -239,7 +239,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dimen_20dp"
+                android:layout_marginBottom="15dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
